<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/record_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/record_time"
        android:textColor="@color/C4"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/current_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/current_time"
        android:textColor="@color/C4"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/app_name"
        android:textColor="@color/C3"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/game_status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:letterSpacing="0.04"
        android:text="@string/game_not_started"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3">

        <Button
            android:id="@+id/btn_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/C2"
            android:tag="0"
            android:textColor="@color/white"
            android:textSize="60sp"
            tools:text="X" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/C2"
            android:tag="1"
            android:textColor="@color/white"
            android:textSize="60sp"
            tools:text="X" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/C2"
            android:tag="2"
            android:textColor="@color/white"
            android:textSize="60sp"
            tools:text="X" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/C2"
            android:tag="3"
            android:textColor="@color/white"
            android:textSize="60sp"
            tools:text="X" />

        <Button
            android:id="@+id/btn_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/C2"
            android:tag="4"
            android:textColor="@color/white"
            android:textSize="60sp"
            tools:text="X" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/C2"
            android:tag="5"
            android:textColor="@color/white"
            android:textSize="60sp"
            tools:text="X" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/C2"
            android:tag="6"
            android:textColor="@color/white"
            android:textSize="60sp"
            tools:text="X" />

        <Button
            android:id="@+id/btn_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/C2"
            android:tag="7"
            android:textColor="@color/white"
            android:textSize="60sp"
            tools:text="X" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/C2"
            android:tag="8"
            android:textColor="@color/white"
            android:textSize="60sp"
            tools:text="X" />

    </GridLayout>

    <Button
        android:id="@+id/start_game_btn"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:backgroundTint="@color/C4"
        android:text="@string/start_game"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>